Rest API security ve message logic seperate from app